--- a/shows.html
+++ b/shows.html
@@ -12,13 +12,13 @@
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/spinner.css" />
   <script src="js/script.js" defer></script>
-  <title>Flixx</title>
+  <title>Flick</title>
 </head>
 
 <body>
   <header class="main-header">
     <div class="container">
-      <div class="logo"><a href="/">FLIXX</a></div>
+      <div class="logo"><a href="/">FLICK</a></div>
       <nav>
         <ul>
           <li>
@@ -41,7 +41,7 @@
   <!-- Footer -->
   <footer class="main-footer">
     <div class="container">
-      <div class="logo"><span>FLIXX</span></div>
+      <div class="logo"><span>FLICK</span></div>
       <div class="social-links">
         <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
         <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
